Fix tag wrapping

--- a/src/assets/scss/base/_navigation.scss
+++ b/src/assets/scss/base/_navigation.scss
@@ -32,7 +32,7 @@ ul.nav-list {
   list-style: none;
 
   li {
-    margin-right: .5rem;
+    margin: .1rem .5rem .1rem 0;
     display: inherit;
   }
 
